[tool.poetry]
name = "oneml-pipelines"
# Handled by `poetry-dynamic-versioning` plugin below.
version = "0.0.0"
description = ""
readme = "README.md"
authors = []
packages = [
    {include = "oneml", from = "src/python"},
]

[[tool.poetry.source]]
name = "immunomics-artifacts"
url = "https://pkgs.dev.azure.com/immunomics/_packaging/immunomics-artifacts/pypi/simple"
priority = "default"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true
dirty = false
# This would allow us to publish from PR builds but Azure Devops artifacts lack support:
# https://developercommunity.visualstudio.com/t/local-version-segments-for-python-package-feeds/892057
metadata = false

[tool.poetry.dependencies]
dill = "*"
typing_extensions = "*"
# we can move the k8s dependency to another package and use plugins
kubernetes = { version = "*" }
python = ">=3.8.10,<3.11"
furl = "^2.1.3"

[tool.poetry.extras]
dev = []

[tool.poetry.group.dev.dependencies]
oneml-devtools = { path = "../oneml-devtools/", develop = true }
coverage = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-nunit = "*"
ruff = "*"
types-urllib3 = "*"

[tool.poetry.scripts]

[tool.poetry.plugins."oneml.app_plugins"]
"oneml.examples.io2" = "oneml.examples.io2._app_plugin:Io2ExamplePlugin"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
packages = ["oneml", "oneml_test"]
cache_dir = "../.tmp/oneml-pipelines/.mypy_cache"
namespace_packages = true
mypy_path = "src/python/:test/python/"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# Disabling this check, it fails if we subclass untyped classes (luigi.Task)
disallow_subclassing_any = false
warn_no_return = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
disallow_any_generics = true
disallow_any_unimported = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
show_traceback = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "kubernetes.*",
    "dill.*",
    "furl.*",
]
ignore_missing_imports = true

[tool.ruff]
cache-dir = "../.tmp/oneml-pipelines/.ruff_cache"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]  # Exclude a variety of commonly ignored directories.
line-length = 99
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["B", "D", "E", "F", "I", "UP"]
ignore = ["B026", "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D417", "E203", "E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

 # Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"  # Like Black, use double quotes for strings.
indent-style = "space"  # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false  # Like Black, respect magic trailing commas.
line-ending = "auto"  # Like Black, automatically detect the appropriate line ending.

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

[tool.coverage.run]
data_file = "../.tmp/oneml-pipelines/.coverage"
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "../.tmp/oneml-pipelines/reports/coverage.xml"

[tool.pytest.ini_options]
cache_dir = "../.tmp/oneml-pipelines/.pytest_cache"
testpaths = ["test/python"]
# Root namespace package folder here ensures coverage will include files with 0% coverage
addopts = """
    --cov=src/python/oneml --cov=test/python/oneml_test
    --cov-report=term
    --cov-report=xml
    --junit-xml ../.tmp/oneml-pipelines/reports/pytest-junit.xml
    --capture=no
    --cov-branch
    --cache-clear
"""
